# bazel-crosscompile

./: .bazelrc  .gitignore  BUILD  README  WORKSPACE  repo.yaml  rpm.sh
bazel/toolchain/: toolchain.bzl
bazel/toolchain/aarch64-none-linux-gnu/: cc_toolchain_config.bzl
bazel/toolchain/aarch64-none-linux-gnu/wrappers/: wrapper
rpm/: BUILD.bazel
