load("@bazeldnf//:deps.bzl", "rpm", "rpmtree", "tar2files")
load("@bazeldnf//:def.bzl", "bazeldnf")

bazeldnf(
    name = "ldd",
    command = "ldd",
    libs = [
        "/usr/lib64/libvirt-lxc.so.0",
        "/usr/lib64/libvirt-qemu.so.0",
        "/usr/lib64/libvirt.so.0",
        "/usr/lib64/libgcrypt.so.20",
        "/usr/lib64/liblz4.so.1",
    ],
    rpmtree = ":testtree",
    rulename = "testtree-libs",
)

rpmtree(
    name = "testtree",
    rpms = [
        "@acl-0__2.2.53-5.fc32.aarch64//rpm",
        "@alternatives-0__1.11-6.fc32.aarch64//rpm",
        "@audit-libs-0__3.0.1-2.fc32.aarch64//rpm",
        "@basesystem-0__11-9.fc32.aarch64//rpm",
        "@bash-0__5.0.17-1.fc32.aarch64//rpm",
        "@bzip2-libs-0__1.0.8-2.fc32.aarch64//rpm",
        "@ca-certificates-0__2020.2.41-1.1.fc32.aarch64//rpm",
        "@coreutils-single-0__8.32-4.fc32.2.aarch64//rpm",
        "@cracklib-0__2.9.6-22.fc32.aarch64//rpm",
        "@crypto-policies-0__20200619-1.git781bbd4.fc32.aarch64//rpm",
        "@cryptsetup-libs-0__2.3.5-2.fc32.aarch64//rpm",
        "@curl-minimal-0__7.69.1-7.fc32.aarch64//rpm",
        "@cyrus-sasl-0__2.1.27-4.fc32.aarch64//rpm",
        "@cyrus-sasl-gssapi-0__2.1.27-4.fc32.aarch64//rpm",
        "@cyrus-sasl-lib-0__2.1.27-4.fc32.aarch64//rpm",
        "@dbus-1__1.12.20-1.fc32.aarch64//rpm",
        "@dbus-broker-0__27-2.fc32.aarch64//rpm",
        "@dbus-common-1__1.12.20-1.fc32.aarch64//rpm",
        "@dbus-libs-1__1.12.20-1.fc32.aarch64//rpm",
        "@device-mapper-0__1.02.171-1.fc32.aarch64//rpm",
        "@device-mapper-libs-0__1.02.171-1.fc32.aarch64//rpm",
        "@elfutils-default-yama-scope-0__0.183-1.fc32.aarch64//rpm",
        "@elfutils-libelf-0__0.183-1.fc32.aarch64//rpm",
        "@elfutils-libs-0__0.183-1.fc32.aarch64//rpm",
        "@expat-0__2.2.8-2.fc32.aarch64//rpm",
        "@fedora-gpg-keys-0__32-12.aarch64//rpm",
        "@fedora-logos-httpd-0__30.0.2-4.fc32.aarch64//rpm",
        "@fedora-release-common-0__32-4.aarch64//rpm",
        "@fedora-release-container-0__32-4.aarch64//rpm",
        "@fedora-repos-0__32-12.aarch64//rpm",
        "@filesystem-0__3.14-2.fc32.aarch64//rpm",
        "@gawk-0__5.0.1-7.fc32.aarch64//rpm",
        "@glib2-0__2.64.6-1.fc32.aarch64//rpm",
        "@glibc-0__2.31-6.fc32.aarch64//rpm",
        "@glibc-common-0__2.31-6.fc32.aarch64//rpm",
        "@glibc-langpack-en-0__2.31-6.fc32.aarch64//rpm",
        "@gmp-1__6.1.2-13.fc32.aarch64//rpm",
        "@gnutls-0__3.6.15-1.fc32.aarch64//rpm",
        "@grep-0__3.3-4.fc32.aarch64//rpm",
        "@gzip-0__1.10-2.fc32.aarch64//rpm",
        "@iptables-libs-0__1.8.4-9.fc32.aarch64//rpm",
        "@json-c-0__0.13.1-13.fc32.aarch64//rpm",
        "@keyutils-libs-0__1.6.1-1.fc32.aarch64//rpm",
        "@kmod-libs-0__27-1.fc32.aarch64//rpm",
        "@krb5-libs-0__1.18.2-29.fc32.aarch64//rpm",
        "@libacl-0__2.2.53-5.fc32.aarch64//rpm",
        "@libargon2-0__20171227-4.fc32.aarch64//rpm",
        "@libattr-0__2.4.48-8.fc32.aarch64//rpm",
        "@libblkid-0__2.35.2-1.fc32.aarch64//rpm",
        "@libcap-0__2.26-7.fc32.aarch64//rpm",
        "@libcap-ng-0__0.7.11-1.fc32.aarch64//rpm",
        "@libcom_err-0__1.45.5-3.fc32.aarch64//rpm",
        "@libcurl-minimal-0__7.69.1-7.fc32.aarch64//rpm",
        "@libdb-0__5.3.28-40.fc32.aarch64//rpm",
        "@libfdisk-0__2.35.2-1.fc32.aarch64//rpm",
        "@libffi-0__3.1-24.fc32.aarch64//rpm",
        "@libgcc-0__10.2.1-9.fc32.aarch64//rpm",
        "@libgcrypt-0__1.8.5-3.fc32.aarch64//rpm",
        "@libgpg-error-0__1.36-3.fc32.aarch64//rpm",
        "@libidn2-0__2.3.0-2.fc32.aarch64//rpm",
        "@libmnl-0__1.0.4-11.fc32.aarch64//rpm",
        "@libmount-0__2.35.2-1.fc32.aarch64//rpm",
        "@libnetfilter_conntrack-0__1.0.7-4.fc32.aarch64//rpm",
        "@libnfnetlink-0__1.0.1-17.fc32.aarch64//rpm",
        "@libnghttp2-0__1.41.0-1.fc32.aarch64//rpm",
        "@libnl3-0__3.5.0-2.fc32.aarch64//rpm",
        "@libnsl2-0__1.2.0-6.20180605git4a062cf.fc32.aarch64//rpm",
        "@libpcap-14__1.10.0-1.fc32.aarch64//rpm",
        "@libpkgconf-0__1.6.3-3.fc32.aarch64//rpm",
        "@libpwquality-0__1.4.4-1.fc32.aarch64//rpm",
        "@libseccomp-0__2.5.0-3.fc32.aarch64//rpm",
        "@libselinux-0__3.0-5.fc32.aarch64//rpm",
        "@libsemanage-0__3.0-3.fc32.aarch64//rpm",
        "@libsepol-0__3.0-4.fc32.aarch64//rpm",
        "@libsigsegv-0__2.11-10.fc32.aarch64//rpm",
        "@libsmartcols-0__2.35.2-1.fc32.aarch64//rpm",
        "@libssh-0__0.9.5-1.fc32.aarch64//rpm",
        "@libssh-config-0__0.9.5-1.fc32.aarch64//rpm",
        "@libssh2-0__1.9.0-5.fc32.aarch64//rpm",
        "@libtasn1-0__4.16.0-1.fc32.aarch64//rpm",
        "@libtirpc-0__1.2.6-1.rc4.fc32.aarch64//rpm",
        "@libunistring-0__0.9.10-7.fc32.aarch64//rpm",
        "@libutempter-0__1.1.6-18.fc32.aarch64//rpm",
        "@libuuid-0__2.35.2-1.fc32.aarch64//rpm",
        "@libverto-0__0.3.0-9.fc32.aarch64//rpm",
        "@libvirt-devel-0__6.6.0-13.fc32.aarch64//rpm",
        "@libvirt-libs-0__6.6.0-13.fc32.aarch64//rpm",
        "@libwsman1-0__2.6.8-12.fc32.aarch64//rpm",
        "@libxcrypt-0__4.4.18-1.fc32.aarch64//rpm",
        "@libxml2-0__2.9.10-8.fc32.aarch64//rpm",
        "@libzstd-0__1.4.9-1.fc32.aarch64//rpm",
        "@lz4-libs-0__1.9.1-2.fc32.aarch64//rpm",
        "@mpfr-0__4.0.2-5.fc32.aarch64//rpm",
        "@ncurses-base-0__6.1-15.20191109.fc32.aarch64//rpm",
        "@ncurses-libs-0__6.1-15.20191109.fc32.aarch64//rpm",
        "@nettle-0__3.5.1-5.fc32.aarch64//rpm",
        "@numactl-libs-0__2.0.12-4.fc32.aarch64//rpm",
        "@openldap-0__2.4.47-5.fc32.aarch64//rpm",
        "@openssl-libs-1__1.1.1i-1.fc32.aarch64//rpm",
        "@p11-kit-0__0.23.22-2.fc32.aarch64//rpm",
        "@p11-kit-trust-0__0.23.22-2.fc32.aarch64//rpm",
        "@pam-0__1.3.1-30.fc32.aarch64//rpm",
        "@pcre-0__8.44-2.fc32.aarch64//rpm",
        "@pcre2-0__10.36-4.fc32.aarch64//rpm",
        "@pcre2-syntax-0__10.36-4.fc32.aarch64//rpm",
        "@pkgconf-0__1.6.3-3.fc32.aarch64//rpm",
        "@pkgconf-m4-0__1.6.3-3.fc32.aarch64//rpm",
        "@pkgconf-pkg-config-0__1.6.3-3.fc32.aarch64//rpm",
        "@qrencode-libs-0__4.0.2-5.fc32.aarch64//rpm",
        "@readline-0__8.0-4.fc32.aarch64//rpm",
        "@sed-0__4.5-5.fc32.aarch64//rpm",
        "@setup-0__2.13.6-2.fc32.aarch64//rpm",
        "@shadow-utils-2__4.8.1-3.fc32.aarch64//rpm",
        "@systemd-0__245.9-1.fc32.aarch64//rpm",
        "@systemd-libs-0__245.9-1.fc32.aarch64//rpm",
        "@systemd-pam-0__245.9-1.fc32.aarch64//rpm",
        "@systemd-rpm-macros-0__245.9-1.fc32.aarch64//rpm",
        "@tzdata-0__2021a-1.fc32.aarch64//rpm",
        "@util-linux-0__2.35.2-1.fc32.aarch64//rpm",
        "@vim-minimal-2__8.2.2541-1.fc32.aarch64//rpm",
        "@xz-libs-0__5.2.5-1.fc32.aarch64//rpm",
        "@yajl-0__2.1.0-14.fc32.aarch64//rpm",
        "@zlib-0__1.2.11-21.fc32.aarch64//rpm",
    ],
    symlinks = {
        "/var/run": "../run",
    },
    visibility = ["//visibility:public"],
)

tar2files(
    name = "testtree-libs",
    files = {
        "/usr/include/libvirt": [
            "libvirt-admin.h",
            "libvirt-common.h",
            "libvirt-domain-checkpoint.h",
            "libvirt-domain-snapshot.h",
            "libvirt-domain.h",
            "libvirt-event.h",
            "libvirt-host.h",
            "libvirt-interface.h",
            "libvirt-lxc.h",
            "libvirt-network.h",
            "libvirt-nodedev.h",
            "libvirt-nwfilter.h",
            "libvirt-qemu.h",
            "libvirt-secret.h",
            "libvirt-storage.h",
            "libvirt-stream.h",
            "libvirt.h",
            "virterror.h",
        ],
        "/usr/lib64": [
            "libacl.so.1",
            "libacl.so.1.1.2253",
            "libattr.so.1",
            "libattr.so.1.1.2448",
            "libaudit.so.1",
            "libaudit.so.1.0.0",
            "libblkid.so.1",
            "libblkid.so.1.1.0",
            "libc-2.31.so",
            "libc.so.6",
            "libcap-ng.so.0",
            "libcap-ng.so.0.0.0",
            "libcom_err.so.2",
            "libcom_err.so.2.1",
            "libcrypt.so.2",
            "libcrypt.so.2.0.0",
            "libcrypto.so.1.1",
            "libcrypto.so.1.1.1i",
            "libcurl.so.4",
            "libcurl.so.4.6.0",
            "libdbus-1.so.3",
            "libdbus-1.so.3.19.13",
            "libdevmapper.so.1.02",
            "libdl-2.31.so",
            "libdl.so.2",
            "libffi.so.6",
            "libffi.so.6.0.2",
            "libgcc_s-10-20201125.so.1",
            "libgcc_s.so.1",
            "libgcrypt.so.20",
            "libgcrypt.so.20.2.5",
            "libgio-2.0.so.0",
            "libgio-2.0.so.0.6400.6",
            "libglib-2.0.so.0",
            "libglib-2.0.so.0.6400.6",
            "libgmodule-2.0.so.0",
            "libgmodule-2.0.so.0.6400.6",
            "libgmp.so.10",
            "libgmp.so.10.3.2",
            "libgnutls.so.30",
            "libgnutls.so.30.28.1",
            "libgobject-2.0.so.0",
            "libgobject-2.0.so.0.6400.6",
            "libgpg-error.so.0",
            "libgpg-error.so.0.27.0",
            "libgssapi_krb5.so.2",
            "libgssapi_krb5.so.2.2",
            "libhogweed.so.5",
            "libhogweed.so.5.0",
            "libidn2.so.0",
            "libidn2.so.0.3.7",
            "libk5crypto.so.3",
            "libk5crypto.so.3.1",
            "libkeyutils.so.1",
            "libkeyutils.so.1.9",
            "libkrb5.so.3",
            "libkrb5.so.3.3",
            "libkrb5support.so.0",
            "libkrb5support.so.0.1",
            "liblz4.so.1",
            "liblz4.so.1.9.1",
            "liblzma.so.5",
            "liblzma.so.5.2.5",
            "libm-2.31.so",
            "libm.so.6",
            "libmount.so.1",
            "libmount.so.1.1.0",
            "libnettle.so.7",
            "libnettle.so.7.0",
            "libnghttp2.so.14",
            "libnghttp2.so.14.20.0",
            "libnl-3.so.200",
            "libnl-3.so.200.26.0",
            "libnl-route-3.so.200",
            "libnl-route-3.so.200.26.0",
            "libnuma.so.1",
            "libnuma.so.1.0.0",
            "libp11-kit.so.0",
            "libp11-kit.so.0.3.0",
            "libpcre.so.1",
            "libpcre.so.1.2.12",
            "libpcre2-8.so.0",
            "libpcre2-8.so.0.10.1",
            "libpthread-2.31.so",
            "libpthread.so.0",
            "libresolv-2.31.so",
            "libresolv.so.2",
            "librt-2.31.so",
            "librt.so.1",
            "libsasl2.so.3",
            "libsasl2.so.3.0.0",
            "libselinux.so.1",
            "libssh.so.4",
            "libssh.so.4.8.6",
            "libssh2.so.1",
            "libssh2.so.1.0.1",
            "libssl.so.1.1",
            "libssl.so.1.1.1i",
            "libsystemd.so.0",
            "libsystemd.so.0.28.0",
            "libtasn1.so.6",
            "libtasn1.so.6.6.0",
            "libtirpc.so.3",
            "libtirpc.so.3.0.0",
            "libudev.so.1",
            "libudev.so.1.6.17",
            "libunistring.so.2",
            "libunistring.so.2.1.0",
            "libutil-2.31.so",
            "libutil.so.1",
            "libvirt-lxc.so.0",
            "libvirt-lxc.so.0.6006.0",
            "libvirt-qemu.so.0",
            "libvirt-qemu.so.0.6006.0",
            "libvirt.so.0",
            "libvirt.so.0.6006.0",
            "libwsman.so.1",
            "libwsman.so.1.0.0",
            "libwsman_client.so.4",
            "libwsman_client.so.4.0.0",
            "libwsman_curl_client_transport.so.1",
            "libwsman_curl_client_transport.so.1.0.0",
            "libxml2.so.2",
            "libxml2.so.2.9.10",
            "libyajl.so.2",
            "libyajl.so.2.1.0",
            "libz.so.1",
            "libz.so.1.2.11",
        ],
    },
    tar = ":testtree",
    visibility = ["//visibility:public"],
)
